--- a/AmazonSignupAutomation/pom.xml
+++ b/AmazonSignupAutomation/pom.xml
@@ -8,13 +8,28 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.3</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
+              </plugin>
+              <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+          <configuration>
+          <skipTests>false</skipTests>
+		<testFailureIgnore>true</testFailureIgnore>
+		<forkMode>once</forkMode>
+          </configuration>
+        </configuration>
       </plugin>
-    </plugins>
+      </plugins>
   </build>
   <dependencies>
   	<dependency>
@@ -42,10 +57,6 @@
   		<artifactId>commons-io</artifactId>
   		<version>2.6</version>
   	</dependency>
-  	<dependency>
-  		<groupId>org.apache.maven.plugins</groupId>
-  		<artifactId>maven-surefire-plugin</artifactId>
-  		<version>2.19.1</version>
-  	</dependency>
   </dependencies>
+  
 </project>
