Added framework changes: Project changed to testingworld.com

--- a/AmazonSignupAutomation/Configfiles/configfile.properties
+++ b/AmazonSignupAutomation/Configfiles/configfile.properties
@@ -1,2 +1,2 @@
-BrowserName=Chrome
-Applicationurl=https://www.amazon.co.uk/ap/signin?openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Fwww.amazon.co.uk%2Fb%2F%3Fie%3DUTF8%26node%3D18982412031%26ref_%3Dnav_signin&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.assoc_handle=gbflex&openid.mode=checkid_setup&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&
+Applicationurl=https://www.thetestingworld.com/
+BrowserName=chrome
