--- a/AmazonSignupAutomation/pom.xml
+++ b/AmazonSignupAutomation/pom.xml
@@ -57,6 +57,17 @@
   		<artifactId>commons-io</artifactId>
   		<version>2.6</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.uncommons</groupId>
+  		<artifactId>reportng</artifactId>
+  		<version>1.1.4</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.google.inject</groupId>
+  		<artifactId>guice</artifactId>
+  		<version>4.2.2</version>
+  	</dependency>
   </dependencies>
   
 </project>
